syntax = "proto3";

message Address{
    string IP = 1;
    int32 port = 2;
}

service CommWithRegistryServer{
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc getReplicaList() returns (stream ReplicaListResponse) {}
}

message RegisterRequest{
    string name = 1;
    Address address = 2;
}

message RegisterResponse{
    string status = 1;
    Address primaryServerAddress = 2;
}

message ReplicaListResponse{
    Address replicaServer = 1;
}